--- a/css/animate.css
+++ b/css/animate.css
@@ -9,7 +9,7 @@ body{
     /* overflow: scroll; */
     /* height: 100vh; */
     /* background: #5d4a75; */
-    background-image: linear-gradient(170deg, #ee805b, #5d4a75);
+    background-image: linear-gradient(#FFE8B3, #EDEDED);
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
