--- a/css/gaya.css
+++ b/css/gaya.css
@@ -10,7 +10,7 @@
 
 body{
     /* background-color: blueviolet; */
-    background-image: linear-gradient(#5d4a75, #ee805b, #fdd44f);
+    background-image: linear-gradient(#FFE8B3, #EDEDED);
     margin: 0;
     padding: 0;
     min-height: 100vh;
@@ -35,6 +35,8 @@ body{
 a{
     text-decoration: none;
 }
+
+
 
 .bg-card{
     border-radius: 20px;
