--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,61 @@
 /* Responsive */
 
+@media (min-width: 0px) and (max-width: 450px){
+    .kolomA{
+        width : 100%;
+    }
+    .kolomB{
+        width : 100%;
+    }
+    .A{
+        width: 100%;
+    }
+    .B{
+        padding-top: 50px;
+        padding-left: 0px !important;
+        width: 80%;
+    }
+    .btn{
+        width: 60%;
+    }
+    .nav{
+        width: 100%;
+    }
+    .btn h4 {
+        font-size: 10px;
+        margin-left: -10px;
+        margin-right: -10px;
+    }
+}
+
+@media (min-width: 451px) and (max-width: 799px){
+    .kolomA{
+        width : 100%;
+    }
+    .kolomB{
+        width : 100%;
+    }
+    .A{
+        width: 100%;
+    }
+    .B{
+        padding-top: 50px;
+        padding-left: 0px !important;
+        width: 80%;
+    }
+    .btn{
+        height: 40%;
+    }
+    .nav{
+        width: 100%;
+    }
+    .btn h4 {
+        font-size: 1px;
+        margin-left: -10px;
+        margin-right: -10px;
+    }
+}
+
 @media (max-width: 800px) {
     .material-icons.md-36 {
         font-size: 34px;
@@ -56,7 +112,7 @@
     }
 
     .btn h4 {
-        font-size: 15px;
+        font-size: 10px;
         margin-left: -10px;
         margin-right: -10px;
     }
