--- a/css/emstyle.css
+++ b/css/emstyle.css
@@ -63,6 +63,16 @@ hr {
   padding-left: 10px;
   padding-right: 10px;
 } */
+.fas{
+  color: #ED7D4A;
+}
+
+
+
+.titleemstyle{
+  color: #313131;
+}
+
 .jumbotronapps {
   border-radius: 7px;
   min-height: 150px;
@@ -96,8 +106,7 @@ hr {
 }
 
 .menubox {
-  box-shadow: 4px 4px 4px rgba(43, 46, 47, 0.2),
-    -4px -4px 4px rgba(204, 204, 204, 0.103);
+  box-shadow: 4px 4px 4px rgba(43, 46, 47, 0.2), -4px -4px 4px rgba(204, 204, 204, 0.103);
   border-radius: 15px;
   min-width: 80%;
   margin-left: -50px;
@@ -210,8 +219,7 @@ hr {
   margin-right: auto;
   padding: 10px;
   display: none;
-  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302),
-    0 2px 6px 2px rgba(60, 64, 67, 0.149);
+  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
 }
 
 .csbutton {
@@ -227,8 +235,7 @@ hr {
   color: white;
   padding-bottom: 15px;
   padding-top: 15px;
-  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302),
-    0 2px 6px 2px rgba(60, 64, 67, 0.149);
+  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
 }
 
 .appspad2 {
@@ -256,8 +263,7 @@ footer {
 
 .cardabout {
   width: 95vw;
-  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302),
-    0 2px 6px 2px rgba(60, 64, 67, 0.149);
+  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
   padding: 5px;
   margin-left: auto;
   margin-right: auto;
@@ -326,9 +332,7 @@ footer {
   /* background: linear-gradient(225deg,
       rgba(36, 142, 166, 1) 0%,
       rgba(37, 199, 217, 1) 50%); */
-  background: linear-gradient(225deg,
-      #5b4f81 0%,
-      #796f9b 50%);
+  background: linear-gradient(225deg, #5b4f81 0%, #796f9b 50%);
   padding-top: 7vh;
   padding-bottom: 12vh;
   overflow: hidden;
@@ -347,8 +351,7 @@ footer {
 
   border-radius: 50%;
   background-color: #ffffff;
-  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302),
-    0 2px 6px 2px rgba(60, 64, 67, 0.149);
+  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
 }
 
 .profilecontent {
@@ -368,14 +371,13 @@ footer {
 .logoutbtn {
   text-align: center;
   padding: 15px 20px 15px 20px;
-  background-color: #D9F2F5;
+  background-color: #d9f2f5;
   border-radius: 30px;
   width: 175px;
   margin-left: auto;
   margin-right: auto;
   margin-top: -30px;
-  box-shadow: 2px 2px 2px 0 rgba(60, 64, 67, 0.137),
-    0 2px 6px 2px rgba(144, 144, 144, 0.149);
+  box-shadow: 2px 2px 2px 0 rgba(60, 64, 67, 0.137), 0 2px 6px 2px rgba(144, 144, 144, 0.149);
   font-size: 1.1em;
   transition: all;
   transition-duration: 0.2s;
@@ -503,8 +505,7 @@ footer {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302),
-    0 2px 6px 2px rgba(60, 64, 67, 0.149);
+  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
   font-size: 1.1em;
   transition: all;
   transition-duration: 0.2s;
@@ -526,8 +527,7 @@ footer {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302),
-    0 2px 6px 2px rgba(60, 64, 67, 0.149);
+  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
   font-size: 1.1em;
   transition: all;
   transition-duration: 0.2s;
@@ -635,8 +635,7 @@ footer {
 }
 
 .agendacard {
-  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302),
-    0 2px 6px 2px rgba(60, 64, 67, 0.149);
+  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
   border-radius: 10px;
 
   width: 100%;
@@ -700,7 +699,6 @@ footer {
   object-fit: cover;
   width: 100%;
   padding: 0;
-
 }
 
 @media (min-width: 976px) {
@@ -715,8 +713,7 @@ footer {
   overflow: hidden;
 
   border-radius: 7px;
-  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302),
-    0 2px 6px 2px rgba(60, 64, 67, 0.149);
+  box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
 }
 
 .menuboxtwib h5 {
@@ -734,8 +731,8 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #5d4b75;
-  border-block-end: 2px solid rgba(36, 142, 166, 0.637);
+  color: #380F14;
+  border-block-end: 2px solid #FCD583;
   padding: 12px 5px 12px 5px;
   height: 100%;
   position: relative;
@@ -764,7 +761,7 @@ footer {
   position: absolute;
   bottom: 0;
   height: 2px;
-  background-color: #5d4b75;
+  background-color: #ed7d4a;
   will-change: left, right;
   left: 0;
   right: 50%;
