--- a/style/css/em2020twib.css
+++ b/style/css/em2020twib.css
@@ -10,7 +10,7 @@
 
 html,
 body {
-  background: linear-gradient(120deg, #ed7d4a 0%, #554469 50%);
+  background: linear-gradient( #ed7d4a 40%, #ECA188 60%);
   font-family: "RubikBI", "Rubikr";
   padding-bottom: 5vh;
 }
@@ -224,7 +224,7 @@ body {
   margin-top: -85px;
   margin-bottom: 10px;
   border-radius: 50%;
-  background-color: #f7edd5;
+  background-color: rgba(255, 255, 255, 50%);
   box-shadow: 1px 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
 }
 
