--- a/css/emlogin.css
+++ b/css/emlogin.css
@@ -12,11 +12,10 @@ html {
 body {
 	max-width: 100vw;
 	padding-bottom: 10vh;
-	background: rgb(124, 100, 156);
+	background: #D46A24;
 	background: linear-gradient(
-		225deg,
-		rgba(124, 100, 156, 1) 0%,
-		rgba(93, 75, 117, 1) 50%
+		
+		#FCD583
 	);
 }
 
@@ -78,14 +77,14 @@ h6 {
 	border-radius: 100px;
 	/* border: 1px solid #dd370c; */
 	background-color: rgba(255, 255, 255, 0.9);
-	color: #5d4b75;
+	color: #D46A24;
 	text-align: center;
 	transition-property: width;
 	transition-duration: 0.3s;
 }
 
 .loginform input::placeholder {
-	color: #5d4b75;
+	color: #D46A24;
 }
 
 .loginform input:focus {
@@ -109,7 +108,7 @@ h6 {
 	border: none;
 	border-radius: 100px;
 
-	background-color: #fcd450;
+	background-color: #EE805B;
 	color: white;
 	padding-bottom: 15px;
 	padding-top: 15px;
