--- a/css/gaya.css
+++ b/css/gaya.css
@@ -10,7 +10,7 @@
 
 body{
     /* background-color: blueviolet; */
-    background-image: linear-gradient(#FFE8B3, #EDEDED);
+    background-image: linear-gradient(#D46A24, #ee805b, #FCD583);
     margin: 0;
     padding: 0;
     min-height: 100vh;
@@ -35,8 +35,6 @@ body{
 a{
     text-decoration: none;
 }
-
-
 
 .bg-card{
     border-radius: 20px;
@@ -117,7 +115,7 @@ h1{
     white-space: nowrap;
     font-family: sans-serif;
     font-size: 11px;
-    color: #333333;
+    color: #212529;
     text-decoration: none;
     -webkit-tap-highlight-color: transparent;
     transition: background-color 0.2s ease-in-out;
@@ -128,12 +126,12 @@ h1{
 }
 
 a:hover {
-    color: #5d4a75;
+    color: #D46A24;
     text-decoration: none;
 }
 
 .nav__link--active {
-    color: #5d4a75;
+    color: #212529;
 }
 
 .nav__text {
