--- a/css/animate.css
+++ b/css/animate.css
@@ -18,6 +18,22 @@ body{
     height: 120vh;
 } */
 
+/* Button Profile EM UB 2022 */
+.btn-lg {
+
+    border: 2px solid #CF6228;
+    color: #CF6228;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  .btn-lg:hover{
+    background-color: #CF6228;
+    color:  whitesmoke;
+  }
+/* Akhir Button Profile EM */
+
 span{
     position: absolute;
     pointer-events: none;
