--- a/store/css/style.css
+++ b/store/css/style.css
@@ -105,7 +105,7 @@ body,html{
 }
 .tambahan{
   height: 50vh;
-  background-image: url('../images/ekstensi.png');
+  background-image: url('../images/bg-jasa2.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
